--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -25,8 +25,14 @@ ja:
         unconfirmed_email: 未確認Eメール
         unlock_token: ロック解除用トークン
         updated_at: 更新日
+        name: ニックネーム
+      admin:
+        email: Eメール
+        password: パスワード
+        remember_me: ログインを記憶する
     models:
       user: ユーザー
+      admin: 管理者
   devise:
     confirmations:
       confirmed: メールアドレスが確認できました。
